# zed-open-capture-python

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: imu_only.py  list_devices.py  motion_detection.py  multi_sensor.py  robust_collection.py  sensors_example.py
src/: sensor_bindings.cpp
src/python/zed_sensors/: __init__.py  wrapper.py
